Release Notes
=============
The following TLAs are used:-
NBC - Not Backward Compatible with previous version of the framework.

Release 1.3.0
--------------------
 - assimilated connector-sftp project
 - externalised hibernate properties

Release 1.2.7
--------------------
 - added sonatype repository distribution management in the pom.xml

Release 1.2.6
--------------------
 - Updated to use ikasan-connector-sftp-classes 1-2-6.
 - Ported to SF. 

Release 1.2.5
--------------------
 - Updated to use ikasan-connector-sftp-classes 1-2-5.
 - Removed MinLocalPort and MaxLocalPort. See ikasan-connector-ftp-classes 1-2-5
release notes for details.

Previous Releases
--------------------
<<see ikasan-1.2reNotes.txt for some older changes >>